section title alignment proble solve

--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@ a,
 li {
   color: #333;
 }
-ection-title {
+.section-title {
   text-align: center;
 }
 .section-title .title-info {
